--- a/formulario.css
+++ b/formulario.css
@@ -96,7 +96,7 @@ fieldset.grupo .campo {
 .botao {
     font-size: 1.2em;
     background: #59429d;
-    border: 2;
+    border: 2em;
     margin-bottom: 1em;
     color: #ffffff;
     padding: 0.2em 0.6em;
